--- a/src/main/resources/templates/admin/search.html
+++ b/src/main/resources/templates/admin/search.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>不挂高数管理页-问题</title>
+    <title>不挂高数管理页-搜索</title>
     <!-- Favicon -->
     <link rel="shortcut icon" href="/favicon.png"/>
     <link rel="bookmark" href="/favicon.png"/>
@@ -93,7 +93,7 @@
                         <i class="ni ni-tv-2 text-primary"></i> 主页
                     </a>
                 </li>
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" href="/admin/question">
                         <i class="ni ni-bullet-list-67 text-red"></i> 问题信息
                     </a>
@@ -103,7 +103,7 @@
                         <i class="ni ni-single-02 text-yellow"></i> 用户信息
                     </a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item active">
                     <a class="nav-link" href="/admin/search">
                         <i class="ni ni-planet text-blue"></i> 搜索
                     </a>
@@ -124,7 +124,7 @@
     <nav class="navbar navbar-top navbar-expand-md navbar-dark" id="navbar-main">
         <div class="container-fluid">
             <!-- Brand -->
-            <a class="h4 mb-0 text-white text-uppercase d-none d-lg-inline-block" href="#">问题列表</a>
+            <a class="h4 mb-0 text-white text-uppercase d-none d-lg-inline-block" href="#">搜索</a>
             <!-- Form -->
             <form class="navbar-search navbar-search-dark form-inline mr-3 d-none d-md-flex ml-lg-auto" action="/admin/search" method="get">
                 <div class="form-group mb-0">
@@ -171,23 +171,32 @@
         <div class="container-fluid">
             <div class="header-body">
                 <!-- Card stats -->
-
+                <ul class="nav nav-pills">
+                    <li class="nav-item">
+                        <a class="nav-link" th:class="${type == 'question'}? 'nav-link' : 'nav-link active'" th:href="'/admin/search' + @{/(search=${search},type=question)}">问题</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" th:class="${type != 'question'}? 'nav-link' : 'nav-link active'" th:href="'/admin/search' + @{/(search=${search},type=user)}">用户</a>
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
     <!-- Page content -->
     <div class="container-fluid mt--7" >
+
         <!-- Table -->
         <div class="row">
             <div class="col">
                 <div class="card shadow">
                     <div class="card-header border-0">
-                        <h3 class="mb-0">所有问题</h3>
+                        <h3 class="mb-0">搜索结果</h3>
                     </div>
+
                     <div class="table-responsive" id="classTable">
                         <table class="table align-items-center table-flush">
                             <thead class="thead-light">
-                            <tr>
+                            <tr th:if="${type == 'question'}">
                                 <th scope="col">问题ID</th>
                                 <th scope="col">用户标题</th>
                                 <th scope="col">发帖人</th>
@@ -195,9 +204,19 @@
                                 <th scope="col">发帖时间</th>
                                 <th scope="col">问题状态</th>
                             </tr>
+                            <tr th:if="${type != 'question'}">
+                                <th scope="col">用户头像</th>
+                                <th scope="col">用户ID</th>
+                                <th scope="col">用户账号</th>
+                                <th scope="col">用户邮箱</th>
+                                <th scope="col">用户昵称</th>
+                                <th scope="col">加入时间</th>
+                                <th scope="col">用户权限</th>
+                            </tr>
                             </thead>
-                            <tbody>
-                            <tr th:each="question:${paginationDto.data}">
+                            <!--问题列表-->
+                            <tbody th:if="${type == 'question' && questions != null}" >
+                            <tr th:each="question:${questions.data}">
                                 <th scope="row">
                                     <div class="media align-items-center">
                                         <a th:href="${'/question/' + question.getQuestionId()}">
@@ -239,23 +258,73 @@
                                 </td>
                             </tr>
                             </tbody>
+
+                            <!--用户列表-->
+                            <tbody th:if="${type != 'question' && users != null}">
+                            <tr th:each="user:${users.data}">
+                                <th scope="row">
+                                    <div class="media align-items-center">
+                                        <a th:href="${'/user/' + user.getUserId()}" class="avatar rounded-circle mr-3">
+                                            <img alt="用户头像" th:src="${user.getHeadUrl()}">
+                                        </a>
+                                    </div>
+                                </th>
+                                <td >
+                                    <a th:href="${'/user/' + user.getUserId()}">
+                                        <span th:text="${user.getId()}"></span>
+                                    </a>
+                                </td>
+                                <td>
+                                    <a th:href="${'/user/' + user.getUserId()}">
+                                        <span class="badge badge-dot mr-4" th:text="${user.getUserId()}"></span>
+                                    </a>
+                                </td>
+                                <td th:text="${user.getEmail()}">
+
+                                </td>
+                                <td th:text="${user.getUserName()}">
+
+                                </td>
+                                <td th:text="${user.getCreationTime()}">
+
+                                </td>
+                                <td class="text-right" >
+                                    <span th:if="${user.getPower() == 1}">普通用户</span>
+                                    <span th:if="${user.getPower() == 0}" style="font-weight: bold; font-size: 20px">管理员</span>
+                                    <span th:if="${user.getPower() == 2}" style="color: #ffe375; font-weight: bold; font-size: 20px">VIP用户</span>
+                                    <div class="dropdown">
+                                        <a class="btn btn-sm btn-icon-only text-light" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                            <i class="fas fa-ellipsis-v"></i>
+                                        </a>
+                                        <div class="dropdown-menu dropdown-menu-right dropdown-menu-arrow" x-placement="top-end" style="position: absolute; will-change: transform; top: 0px; left: 0px; transform: translate3d(32px, -2px, 0px);">
+                                            <button th:data-id="${user.getId()}" class="dropdown-item">设置为管理员</button>
+                                            <button th:data-id="${user.getId()}" class="dropdown-item">设置为VIP</button>
+                                            <button th:data-id="${user.getId()}" class="dropdown-item">重置密码</button>
+                                        </div>
+                                    </div>
+                                </td>
+                            </tr>
+                            </tbody>
                         </table>
                     </div>
-                    <div class="card-footer py-4">
-                        <nav aria-label="Page navigation example" th:if="${paginationDto.totalPage} != 0">
+
+
+                    <!--问题页码-->
+                    <div class="card-footer py-4" th:if="${questions != null && type == 'question'}">
+                        <nav aria-label="Page navigation example" th:if="${questions.totalPage} != 0">
                             <ul class="pagination justify-content-end">
                                 <!-- 返回首页 -->
-                                <li class="page-item" th:if="${paginationDto.showFirstPage}">
-                                    <a class="page-link" id="first-page-a" href="/admin/question"
+                                <li class="page-item" th:if="${questions.showFirstPage}">
+                                    <a class="page-link" id="first-page-a" th:href="'/admin/search' + @{/(search=${search},type=${type})}"
                                        aria-label="Previous" onclick="addLocaleUrlForPage('first-page-a')">
                                         <span aria-hidden="true">&laquo;&laquo;</span>
                                         <span class="sr-only">Previous</span>
                                     </a>
                                 </li>
                                 <!-- 上一页 -->
-                                <li class="page-item" th:if="${paginationDto.showPrevious}">
+                                <li class="page-item" th:if="${questions.showPrevious}">
                                     <a class="page-link" id="link-to-last-a"
-                                       th:href="'/admin/question' + @{/(page=${paginationDto.nowPage} - 1)}"
+                                       th:href="@{/(page=${questions.nowPage - 1},search=${search},type=${type})}"
                                        aria-label="Previous"
                                        onclick="addLocaleUrlForPage('link-to-last-a')">
                                         <span aria-hidden="true">&laquo;</span>
@@ -264,9 +333,9 @@
                                 </li>
 
 
-                                <li class="page-item" th:each="page : ${paginationDto.pages}"
-                                    th:class="${paginationDto.nowPage == page}? 'page-item active' : 'page-item'">
-                                    <a class="page-link" th:href="${'/admin/question?page='+page}"
+                                <li class="page-item" th:each="page : ${questions.pages}"
+                                    th:class="${questions.nowPage == page}? 'page-item active' : 'page-item'">
+                                    <a class="page-link" th:href="'/admin/search'+ @{/(page=${page},search=${search},type=${type})}"
                                        th:text="${page}" th:id="${page}"
                                        th:onclick="'javascript:addLocaleUrlForPage(\''+${page}+'\')'">
                                         1
@@ -275,9 +344,9 @@
 
 
                                 <!-- 下一页 -->
-                                <li class="page-item" th:if="${paginationDto.showNext}">
+                                <li class="page-item" th:if="${questions.showNext}">
                                     <a class="page-link" id="lind-to-next-a"
-                                       th:href="'/admin/question/' + @{/(page=${paginationDto.nowPage} + 1)}"
+                                       th:href="'/admin/search'+@{/(page=${questions.nowPage + 1},search=${search},type=${type})}"
                                        aria-label="Next"
                                        onclick="addLocaleUrlForPage('lind-to-next-a')">
                                         <span aria-hidden="true">&raquo;</span>
@@ -285,10 +354,68 @@
                                     </a>
                                 </li>
                                 <!-- 最后一页 -->
-                                <li class="page-item" th:if="${paginationDto.showEndPage}">
+                                <li class="page-item" th:if="${questions.showEndPage}">
                                     <a class="page-link" id="link-to-end-a"
-                                       th:href="'/admin/question/' + @{/(page=${paginationDto.totalPage})}"
-                                       th:if="${paginationDto.showEndPage}"
+                                       th:href="'/admin/search'+@{/(page=${questions.totalPage},search=${search},type=${type})}"
+                                       th:if="${questions.showEndPage}"
+                                       aria-label="Next" onclick="addLocaleUrlForPage('link-to-end-a')">
+                                        <span aria-hidden="true">&raquo;&raquo;</span>
+                                        <span class="sr-only">Next</span>
+                                    </a>
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
+
+                    <!--用户页码-->
+                    <div class="card-footer py-4" th:if="${users != null && type != 'question'}">
+                        <nav aria-label="Page navigation example" th:if="${users.totalPage} != 0">
+                            <ul class="pagination justify-content-end">
+                                <!-- 返回首页 -->
+                                <li class="page-item" th:if="${users.showFirstPage}">
+                                    <a class="page-link" id="first-page-a" th:href="'/admin/search' + @{/(search=${search},type=${type})}"
+                                       aria-label="Previous" onclick="addLocaleUrlForPage('first-page-a')">
+                                        <span aria-hidden="true">&laquo;&laquo;</span>
+                                        <span class="sr-only">Previous</span>
+                                    </a>
+                                </li>
+                                <!-- 上一页 -->
+                                <li class="page-item" th:if="${users.showPrevious}">
+                                    <a class="page-link" id="link-to-last-a"
+                                       th:href="@{/(page=${users.nowPage - 1},search=${search},type=${type})}"
+                                       aria-label="Previous"
+                                       onclick="addLocaleUrlForPage('link-to-last-a')">
+                                        <span aria-hidden="true">&laquo;</span>
+                                        <span class="sr-only">Previous</span>
+                                    </a>
+                                </li>
+
+
+                                <li class="page-item" th:each="page : ${users.pages}"
+                                    th:class="${users.nowPage == page}? 'page-item active' : 'page-item'">
+                                    <a class="page-link" th:href="'/admin/search'+ @{/(page=${page},search=${search},type=${type})}"
+                                       th:text="${page}" th:id="${page}"
+                                       th:onclick="'javascript:addLocaleUrlForPage(\''+${page}+'\')'">
+                                        1
+                                    </a>
+                                </li>
+
+
+                                <!-- 下一页 -->
+                                <li class="page-item" th:if="${users.showNext}">
+                                    <a class="page-link" id="lind-to-next-a"
+                                       th:href="'/admin/search'+@{/(page=${users.nowPage + 1},search=${search},type=${type})}"
+                                       aria-label="Next"
+                                       onclick="addLocaleUrlForPage('lind-to-next-a')">
+                                        <span aria-hidden="true">&raquo;</span>
+                                        <span class="sr-only">Next</span>
+                                    </a>
+                                </li>
+                                <!-- 最后一页 -->
+                                <li class="page-item" th:if="${users.showEndPage}">
+                                    <a class="page-link" id="link-to-end-a"
+                                       th:href="'/admin/search'+@{/(page=${users.totalPage},search=${search},type=${type})}"
+                                       th:if="${users.showEndPage}"
                                        aria-label="Next" onclick="addLocaleUrlForPage('link-to-end-a')">
                                         <span aria-hidden="true">&raquo;&raquo;</span>
                                         <span class="sr-only">Next</span>
@@ -338,7 +465,10 @@
 <script src="/assets/vendor/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 <!-- Argon JS -->
 <script src="/assets/js/argon.js?v=1.0.0"></script>
+<script src="/resources/js/jquery.cookie.js"></script>
+<script src="/resources/js/getClassAndOrg.js"></script>
 <script>
+    getClassScheduleList();
     /*获取当前时间*/
     function showTime() {
         //创建Date对象
