完善管理页面

--- a/src/main/resources/templates/SignIn.html
+++ b/src/main/resources/templates/SignIn.html
@@ -131,7 +131,7 @@
             </div>
         </div>
         <div class="col">
-            <button type="button" class="btn btn-link">[[#{index.forgetPassword}]]</button>
+            <button onclick="alert('暂未完成，如有需要请联系管理员！')" type="button" class="btn btn-link">[[#{index.forgetPassword}]]</button>
         </div>
     </div>
 
