--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -81,13 +81,12 @@
                                 <option value="null" style="display: none;" selected>
                                     [[#{publish.classification}]]
                                 </option>
-                                <option value="开发语言">开发语言</option>
-                                <option value="平台框架">平台框架</option>
-                                <option value="服务器">服务器</option>
-                                <option value="数据库缓存">数据库缓存</option>
-                                <option value="开发工具">开发工具</option>
-                                <option value="系统设备">系统设备</option>
-                                <option value="休闲灌水">休闲灌水</option>
+                                <option value="提问">提问</option>
+                                <option value="讨论">讨论</option>
+                                <option value="分享">分享</option>
+                                <option value="建议">建议</option>
+                                <option value="Bug">Bug</option>
+                                <option value="灌水">灌水</option>
                             </select>
                             <small id="classHelp" class="form-text" style="color: red"
                                    th:text="${classMessage}"></small>
