--- a/src/main/resources/templates/navigation.html
+++ b/src/main/resources/templates/navigation.html
@@ -27,11 +27,11 @@
                        onclick="addLocaleUrl('link-hone-a')">主页<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active mx-2">
-                    <a class="nav-link" href="#" onclick="alert('正在施工中！！！')" th:text="#{index.lebel}">分类<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#" onclick="alert('正在施工中！！！')" th:text="#{index.user}">用户<span class="sr-only">(current)</span></a>
                 </li>
-                <li class="nav-item active mx-2">
-                    <a class="nav-link" href="#" onclick="alert('正在施工中！！！')" th:text="#{index.hot}">热门<span class="sr-only">(current)</span></a>
-                </li>
+                <!--<li class="nav-item active mx-2">-->
+                    <!--<a class="nav-link" href="#" onclick="alert('正在施工中！！！')" th:text="#{index.hot}">热门<span class="sr-only">(current)</span></a>-->
+                <!--</li>-->
 
                 <!-- 搜索 -->
                 <p class="form-inline my-2 my-lg-0 mx-2">
