完善消息提醒

--- a/src/main/resources/templates/admin/question.html
+++ b/src/main/resources/templates/admin/question.html
@@ -207,7 +207,7 @@
                                     </div>
                                 </th>
                                 <td >
-                                    <a th:href="${'/question/' + question.getQuestionId()}">
+                                    <a th:href="${'/question?class=' + question.classification}">
                                         <span th:text="${question.classification}"></span>
                                     </a>
                                 </td>
