--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -133,7 +133,8 @@
                         <!--<p class="mb-1">Cras sit amet nibh libero</p>-->
 
                         <p class="mb-0 small">
-                            <a class="issuse-question-class" target="_blank" href="#"
+                            <!--TODO 链接待修改-->
+                            <a class="issuse-question-class" href="#"
                                th:text="${question.classification}">分类</a>
                             <a class="issuse-question-people" target="_blank"
                                th:href="'/user/'+ ${question.user.getUserId()}"
