--- a/src/main/resources/templates/userMessage.html
+++ b/src/main/resources/templates/userMessage.html
@@ -61,12 +61,12 @@
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="#">
-                                        点赞 <span class="badge badge-info">0</span>
+                                        点赞 <span class="badge badge-info" th:text="${likeCount}">0</span>
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">
-                                        系统 <span class="badge badge-info">0</span>
+                                    <a class="nav-link" th:href="${'/message/' + user.getUserId() + '?type=5'}">
+                                        系统 <span class="badge badge-info" th:text="${systemCount}">0</span>
                                     </a>
                                 </li>
                                 <li class="nav-item">
@@ -84,12 +84,17 @@
                         <div class="container">
                             <div class="row">
                                 <div class="col">
+                                    <span th:if="${notification.getType() == 6 || notification.getType() == 8}">管理员</span>
+                                    <span th:if="${notification.getType() == 7 || notification.getType() == 9}">由于管理员</span>
                                     <a th:href="${'/user/'+notification.notifierId}"><span th:text="${notification.notifierName}"></span></a>
                                     <span class="ml-2" th:text="${notification.getTypeName()}"></span>
                                     <a class="ml-2" th:href="${'/message/' + user.getUserId() +'/' + notification.getId()}"><span th:text="${notification.getOuterTitle()}"></span></a>
                                     <span th:if="${notification.getType()==2}" class="ml-2">下的评论</span>
-                                    <span class="badge badge-warning" th:if="${notification.getStatus()==0}">未读</span>
 
+                                    <span th:if="${notification.getType() == 6}">如有疑问或需要恢复，请联系管理员！</span>
+                                    <span th:if="${notification.getType() == 7}">导致了你的评论被牵连删除，如有疑问或需要恢复，请联系管理员！</span>
+                                    <span th:if="${notification.getType() == 9}">因此你的评论也被恢复！如有疑问，请联系管理员！</span>
+                                    <span class="badge badge-warning" th:if="${notification.getStatus()==0}">未读</span>
                                 </div>
                             </div>
                             <div class="row">
